<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".SetOrderActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorOrderHead">
        <ImageView
            android:id="@+id/order_back_iv"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:src="@drawable/order_back_icon"
            android:scaleType="fitXY"
            android:layout_width="26dp"
            android:layout_height="23dp"/>
        <TextView
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:text="@string/order_title"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <ImageView
        android:scaleType="fitXY"
        android:src="@drawable/order_pay"
        android:layout_width="match_parent"
        android:layout_height="120dp"/>

    <RadioGroup
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_margin="5dp"
            android:background="@drawable/fillet_green"
            android:textColor="@color/colorOrderType"
            android:textSize="18sp"
            android:text="@string/order_rent_type1"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:layout_margin="5dp"
            android:background="@drawable/fillet_green"
            android:textColor="@color/colorOrderType"
            android:textSize="18sp"
            android:text="@string/order_rent_type2"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:layout_margin="5dp"
            android:background="@drawable/fillet_green"
            android:textColor="@color/colorOrderType"
            android:textSize="18sp"
            android:text="@string/order_rent_type3"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <EditText
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:singleLine="true"
        android:maxLength="9"
        android:hint="联系方式"
        android:layout_width="match_parent"
        android:layout_height="45dp"/>
    <EditText
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:singleLine="true"
        android:maxLength="9"
        android:hint="衣服说明：XS/S/M/XM/L/XL/XXL"
        android:layout_width="match_parent"
        android:layout_height="45dp"/>
    <EditText
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:singleLine="true"
        android:maxLength="9"
        android:hint="其他说明"
        android:layout_width="match_parent"
        android:layout_height="45dp"/>

    <LinearLayout
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="220dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/alipay_icon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"/>
                <TextView
                    android:textColor="@color/clorStateHead"
                    android:layout_marginLeft="8dp"
                    android:textSize="20sp"
                    android:text="@string/order_pay_ali"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                android:background="@color/colormusicBg"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/wx_pay_icon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"/>
                <TextView
                    android:textColor="@color/clorStateHead"
                    android:layout_marginLeft="8dp"
                    android:textSize="20sp"
                    android:text="@string/order_pay_wx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                android:background="@color/colormusicBg"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/sao_code_icon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"/>
                <TextView
                    android:textColor="@color/clorStateHead"
                    android:layout_marginLeft="8dp"
                    android:textSize="20sp"
                    android:text="@string/order_pay_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                android:background="@color/colormusicBg"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>



        </LinearLayout>

        <RadioGroup
            android:gravity="right"
            android:orientation="vertical"
            android:layout_weight="1.8"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:background="@color/colormusicBg"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <RadioButton
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:background="@color/colormusicBg"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <RadioButton
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:background="@color/colormusicBg"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>

        </RadioGroup>

    </LinearLayout>

    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <TextView
        android:textColor="@color/white"
        android:background="@color/colorOrderHead"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/order_pay_money"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>



</LinearLayout>