<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/colorselfBg"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/cardview_dark_background"
        android:gravity="center_vertical">

        <FrameLayout
            android:id="@+id/clo_flt_head"
            android:padding="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:gravity="center_vertical"
                android:id="@+id/clo_tv_head"
                android:textSize="13sp"
                android:paddingLeft="30dp"
                android:hint="@string/head_txt_select"
                android:background="@color/colorRbtnBg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <ImageView
                android:id="@+id/clo_iv_head"
                android:src="@drawable/select"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
        </FrameLayout>
        <ImageView
            android:padding="8dp"
            android:layout_weight="6"
            android:src="@drawable/menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/clo_flt"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent">

    </FrameLayout>

    <LinearLayout
        android:paddingTop="2dp"
        android:id="@+id/ball_rgp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/colorRbtnBg">

        <LinearLayout
            android:layout_marginRight="3dp"
            android:background="@drawable/fillet"
            android:id="@+id/clo_llt_home"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="60dp">
            <ImageView
                android:id="@+id/clo_iv_home"
                android:src="@drawable/clothes_rbtn_home_selector"
                android:contentDescription="@null"
                android:layout_width="100px"
                android:layout_height="86px"/>
            <TextView
                android:id="@+id/clo_tv_home"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_home"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginRight="3dp"
            android:background="@drawable/fillet"
            android:id="@+id/clo_llt_sort"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="60dp">
            <ImageView
                android:id="@+id/clo_iv_sort"
                android:src="@drawable/clothes_rbtn_sort_selector"
                android:contentDescription="@null"
                android:layout_width="100px"
                android:layout_height="86px"/>
            <TextView
                android:id="@+id/clo_tv_sort"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_sort" />
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/fillet"
            android:id="@+id/clo_llt_car"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="60dp">
            <ImageView
                android:id="@+id/clo_iv_car"
                android:src="@drawable/clothes_rbtn_car_selector"
                android:contentDescription="@null"
                android:layout_width="100px"
                android:layout_height="86px"/>
            <TextView
                android:id="@+id/clo_tv_car"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_car"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="3dp"
            android:background="@drawable/fillet"
            android:id="@+id/clo_llt_self"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="60dp">
            <ImageView
                android:id="@+id/clo_iv_self"
                android:contentDescription="@null"
                android:src="@drawable/clothes_rbtn_self_selector"
                android:layout_width="100px"
                android:layout_height="86px"/>
            <TextView
                android:id="@+id/clo_tv_self"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_my"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>