<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:scrollbars="none"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--广告轮播图-->
        <com.geek.banner.Banner
            android:id="@+id/home_banner"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            app:banner_auto_play="true"
            app:banner_default_image="@drawable/banner_default"
            app:banner_expose_width="20dp"
            app:banner_interval_time="5000"
            app:banner_multi_anim="ScaleIn"
            app:banner_page_spacing="10dp"
            app:banner_scroll_time="1000"
            app:banner_show_indicator="true"
            app:banner_show_model="Multi"
            app:layout_scrollFlags="scroll" />
        <!--功能分类菜单-->
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="90dp">
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="45dp"
                android:layout_height="65dp">
                <ImageView
                    android:src="@drawable/clo_rbtn_home_true"
                    android:layout_width="35dp"
                    android:layout_height="35dp"/>
                <TextView
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:textSize="10dp"
                    android:textColor="@color/white"
                    android:text="点击我"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="45dp"
                android:layout_height="65dp">
                <ImageView
                    android:src="@drawable/clo_rbtn_home_true"
                    android:layout_width="35dp"
                    android:layout_height="35dp"/>
                <TextView
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:textSize="10dp"
                    android:textColor="@color/white"
                    android:text="点击我"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="45dp"
                android:layout_height="65dp">
                <ImageView
                    android:src="@drawable/clo_rbtn_home_true"
                    android:layout_width="35dp"
                    android:layout_height="35dp"/>
                <TextView
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:textSize="10dp"
                    android:textColor="@color/white"
                    android:text="点击我"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="45dp"
                android:layout_height="65dp">
                <ImageView
                    android:src="@drawable/clo_rbtn_home_true"
                    android:layout_width="35dp"
                    android:layout_height="35dp"/>
                <TextView
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:textSize="10dp"
                    android:textColor="@color/white"
                    android:text="点击我"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="45dp"
                android:layout_height="65dp">
                <ImageView
                    android:src="@drawable/clo_rbtn_home_true"
                    android:layout_width="35dp"
                    android:layout_height="35dp"/>
                <TextView
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:textSize="10dp"
                    android:textColor="@color/white"
                    android:text="点击我"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <!--猜你想租-->
        <RelativeLayout
            android:paddingLeft="10dp"
            android:id="@+id/home_ctl"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingRight="10dp">
            <TextView
                android:layout_alignParentLeft="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:id="@+id/home_like_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:text="@string/home_like"/>
            <TextView
                android:onClick="start_more"
                android:layout_toLeftOf="@+id/like_more_iv"
                android:textColor="@color/colorStatusBar"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:text="@string/home_like_more"
                />

            <ImageView
                android:onClick="start_more"
                android:id="@+id/like_more_iv"
                android:layout_alignParentRight="true"
                android:src="@drawable/like_more"
                android:layout_width="20dp"
                android:layout_height="match_parent"/>
        </RelativeLayout>
        <LinearLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="125dp">

            <com.shehuan.niv.NiceImageView
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:id="@+id/home_like_niv1"
                android:layout_width="match_parent"
                app:corner_radius="13dp"
                android:scaleType="fitXY"
                android:layout_height="match_parent"
                android:src="@drawable/item_like" />
            <com.shehuan.niv.NiceImageView
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:id="@+id/home_like_niv2"
                android:layout_width="match_parent"
                app:corner_radius="13dp"
                android:scaleType="fitXY"
                android:layout_height="match_parent"
                android:src="@drawable/item_like" />
            <com.shehuan.niv.NiceImageView
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:id="@+id/home_like_niv3"
                android:layout_width="match_parent"
                app:corner_radius="13dp"
                android:scaleType="fitXY"
                android:layout_height="match_parent"
                android:src="@drawable/item_like" />
        </LinearLayout>
        <LinearLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:gravity="left"
                android:text="@string/nav_car"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:gravity="left"
                android:text="@string/nav_car"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:gravity="left"
                android:text="@string/nav_car"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorMainNavTxFalse"
                android:textSize="13sp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:gravity="left"
                android:text="@string/home_like_item"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorMainNavTxFalse"
                android:textSize="13sp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:gravity="left"
                android:text="@string/home_like_item"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorMainNavTxFalse"
                android:textSize="13sp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:gravity="left"
                android:text="@string/home_like_item"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <!--优质服装视频MV-->
        <RelativeLayout
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingRight="10dp">
            <TextView
                android:layout_alignParentLeft="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:text="@string/home_like_MV"/>
            <TextView
                android:onClick="start_more"
                android:layout_toLeftOf="@+id/like_mv_iv"
                android:textColor="@color/colorStatusBar"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:id="@+id/home_like_mv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:text="@string/home_like_more"
                />

            <ImageView
                android:onClick="start_more"
                android:id="@+id/like_mv_iv"
                android:layout_alignParentRight="true"
                android:src="@drawable/like_more"
                android:layout_width="20dp"
                android:layout_height="match_parent"/>
        </RelativeLayout>
        <!--视频进入的listview-->

        <!--list数据-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_mv_rlv"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--滚动到底部了-->
        <TextView
            android:textColor="@color/colorFragmentSelfBg"
            android:gravity="center"
            android:text="@string/home_scroll_end"
            android:layout_width="match_parent"
            android:layout_height="44dp"/>
    </LinearLayout>
</ScrollView>